Fixed align of the Telegram icon in the footer.

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -26,7 +26,7 @@
 
   .Social {
     display: flex;
-    margin: 25px 0 0;
+    margin: 46px 0 0;
 
     .SocialItem {
       margin-right: 16px;
